add margin-top for search buttons for xs

--- a/stock.html
+++ b/stock.html
@@ -595,7 +595,7 @@
                       <div>
                       </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 search-button-group">
                       <button class="btn btn-primary" ng-click="submit()" ng-disabled="searchForm.symbolInput.$invalid">
                         <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Get Quote
                       </button>
