--- a/stock.html
+++ b/stock.html
@@ -324,9 +324,9 @@
       $scope.favorite = {
         currentSymbol: null,
         currentSymbolData: null,
-        stockData: {},
-        sortOrder: "ascending",
-        sortBy: "default",
+        stockData: [],
+        orderPropertyName: 'null',
+        reverse: "false",
       };
       $scope.newsList = [];
       // function to validate user input every time the key is down
@@ -545,9 +545,9 @@
         return formatted_favorite_data;
       }
       $scope.refresh_favorite = function() {
-        var symbol_keys = Object.keys($scope.favorite.stockData);
-        for(var index in symbol_keys) {
-          var stock_symbol = symbol_keys[index];
+        var favorite_list_length = $scope.favorite.stockData.length;
+        for(var index = 0; index < favorite_list_length; ++index) {
+          var stock_symbol = $scope.favorite.stockData[index].symbol;
           var refresh_config = {
             params: {
               symbol: stock_symbol,
@@ -560,10 +560,12 @@
               var responseData = responseJson.data;
               if(responseData != null) {
                 var stock_symbol = response.config.params.symbol;
-                if(stock_symbol in $scope.favorite.stockData) {
-                  // only if this symbol is favorited
-                  $scope.favorite.stockData[stock_symbol] = $scope.extract_for_favorite(responseData);
+                // only if this symbol is favorited, update data in the stockData array
+                var index = $scope.get_symbol_index_from_favorite_list(stock_symbol);
+                if(index != -1) {
+                  $scope.favorite.stockData[index].data = $scope.extract_for_favorite(responseData);
                 }
+
               } else {
                 // TODO invalid symbol error possible?
                 // use previously updated data instead of showing N/A
@@ -603,11 +605,17 @@
         if(target_index != -1) {
           // if already favorited, remove from the list and remove from stockData for favorite
           favorite_list.splice(target_index, 1);
-          delete $scope.favorite.stockData[$scope.favorite.currentSymbol];
+          var index = $scope.get_symbol_index_from_favorite_list($scope.favorite.currentSymbol);
+          if(index != -1) {
+            $scope.favorite.stockData.splice(index, 1);
+          }
         } else {
           // if not favorited, add to the favorite list and add to stockData for favorite
           favorite_list.push($scope.favorite.currentSymbol);
-          $scope.favorite.stockData[$scope.favorite.currentSymbol] = $scope.extract_for_favorite($scope.favorite.currentSymbolData);
+          $scope.favorite.stockData.push({
+            symbol: $scope.favorite.currentSymbol,
+            data: $scope.extract_for_favorite($scope.favorite.currentSymbolData)
+          });
         }
         $scope.set_favorite_from_local(favorite_list);
       }
@@ -616,18 +624,34 @@
         var favorite_list = $scope.get_favorite_from_local();
         var target_index = favorite_list.indexOf(symbol);
         favorite_list.splice(target_index, 1);
-        delete $scope.favorite.stockData[symbol];
+        var index = $scope.get_symbol_index_from_favorite_list(symbol);
+        if(index != -1) {
+          $scope.favorite.stockData.splice(index, 1);
+        }
         $scope.set_favorite_from_local(favorite_list);
         
       }
       $scope.check_current_favorited = function() {
-        return $scope.favorite.currentSymbol in $scope.favorite.stockData;
+        var index = $scope.get_symbol_index_from_favorite_list($scope.favorite.currentSymbol);
+        return index != -1;
+      }
+      $scope.get_symbol_index_from_favorite_list = function(symbol) {
+        var favoriteListLength = $scope.favorite.stockData.length;
+        for(var index = 0; index < favoriteListLength; ++index) {
+          if(symbol == $scope.favorite.stockData[index].symbol) {
+            return index;
+          }
+        }
+        return -1;
       }
       // get favorite list when starting
       var favorite_list = $scope.get_favorite_from_local();
       // initialize stockData with favorited symbols as keys
       for(var index in favorite_list) {
-        $scope.favorite.stockData[favorite_list[index]] = null;
+        $scope.favorite.stockData.push({
+          symbol: favorite_list[index],
+          data: null,
+        });
       }
       // get stock data for these symbols
       $scope.refresh_favorite();
@@ -725,22 +749,22 @@
                   Sort by
                 </div>
                 <div class="col-sm-2 col-xs-12">
-                  <select class="form-control" ng-model="favorite.sortBy">
-                    <option value="default" selected>Default</option>
+                  <select class="form-control" ng-model="favorite.orderPropertyName">
+                    <option value="null" selected>Default</option>
                     <option value="symbol">Symbol</option>
-                    <option value="price">Price</option>
-                    <option value="change">Change</option>
-                    <option value="change_percent">Change Percent</option>
-                    <option value="volume">Volume</option>
+                    <option value="data.price">Price</option>
+                    <option value="data.change">Change</option>
+                    <option value="data.changePercent">Change Percent</option>
+                    <option value="data.volume">Volume</option>
                   </select>
                 </div>
                 <div class="col-sm-1 col-xs-12 h5">
                   Order
                 </div>
                 <div class="col-sm-2 col-xs-12">
-                  <select class="form-control" ng-model="favorite.sortOrder" ng-disabled="favorite.sortBy=='default'">
-                    <option value="ascending" selected>Ascending</option>
-                    <option value="descending">Descending</option>
+                  <select class="form-control" ng-model="favorite.reverse" ng-disabled="favorite.orderPropertyName=='null'">
+                    <option value="false" selected>Ascending</option>
+                    <option value="true">Descending</option>
                   </select>
                 </div>
               </div>
@@ -750,16 +774,16 @@
                     <tr>
                       <th>Symbol</th><th>Stock Price</th><th>Change (Change Percent)</th><th>Volume</th><th>
                     </tr>
-                    <tr ng-repeat="(symbol, data) in favorite.stockData">
-                      <td>{{symbol}}</td>
-                      <td ng-if='data'>{{data.priceStr}}</td>
-                      <td ng-if='!data'>N/A</td>
-                      <td ng-if='data' ng-bind-html="data.changeHtml">{{data.changeHtml}}</td>
-                      <td ng-if='!data'>N/A</td>
-                      <td ng-if='data'>{{data.volumeStr}}</td>
-                      <td ng-if='!data'>N/A</td>
+                    <tr ng-repeat="item in favorite.stockData | orderBy:favorite.orderPropertyName:(favorite.orderPropertyName=='null' ? false : favorite.reverse == 'true')">
+                      <td>{{item.symbol}}</td>
+                      <td ng-if='item.data'>{{item.data.priceStr}}</td>
+                      <td ng-if='!item.data'>N/A</td>
+                      <td ng-if='item.data' ng-bind-html="item.data.changeHtml">{{data.changeHtml}}</td>
+                      <td ng-if='!item.data'>N/A</td>
+                      <td ng-if='item.data'>{{item.data.volumeStr}}</td>
+                      <td ng-if='!item.data'>N/A</td>
                       <td>
-                        <button type="button" class="btn btn-default btn-md" ng-click="remove_favorite(symbol)">
+                        <button type="button" class="btn btn-default btn-md" ng-click="remove_favorite(item.symbol)">
                           <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                         </button>
                       </td>
