--- a/stock.html
+++ b/stock.html
@@ -107,7 +107,7 @@
       <div class="panel panel-default">
         <div class="panel-body my-panel-parent">
           <!-- #2.1 favorite stock panel -->
-          <div class="panel panel-default my-panel-child" ng-hide="!view.show_favorite">
+          <div class="panel panel-default my-panel-favorite" ng-hide="!view.show_favorite">
             <div class="panel-heading text-left">
               <span class="pull-right">
                 <span class="hidden-xs">Automatic Refresh: </span>
@@ -176,7 +176,7 @@
           </div>
         <!-- #2.2 stock detail panel -->
         <!-- inner stock with 3 pills -->
-          <div class="panel panel-default my-panel-child" ng-hide="view.show_favorite">
+          <div class="panel panel-default my-panel-detail" ng-hide="view.show_favorite">
             <div class="panel-heading text-center">
               <button type="button" class="btn btn-default btn-lg pull-left" ng-click="view.show_favorite=!view.show_favorite">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
